preferences to profile renaming
